# s0-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  SKILL.md  action.yml  install.sh  pyinstaller.spec  pyproject.toml
.claude/skills/s0-cli/: SKILL.md
.cursor/rules/: s0-cli.mdc
.github/workflows/: ci.yml  docker-publish.yml  example-pr-scan.yml  release-binaries.yml
bench/: README.md
bench/tasks/hardcoded_secret/: README.md  ground_truth.json
bench/tasks/sql_injection_min/: README.md
bench/tasks/xss_template/: ground_truth.json
bench/tasks_test/hardcoded_secret/: README.md
bench/tasks_test/jwt_no_verify/: README.md  ground_truth.json
bench/tasks_test/pickle_deserialization/: README.md  ground_truth.json
bench/tasks_test/vibe_stub_auth/: README.md  ground_truth.json
bench/tasks_train/command_injection/: README.md  ground_truth.json
bench/tasks_train/hallucinated_import/: README.md  ground_truth.json
bench/tasks_train/path_traversal/: README.md  ground_truth.json
bench/tasks_train/weak_crypto_md5/: README.md  (+1 more)
docs/integrations/: INSTALL.md
docs/results/: REAL_WORLD_RESULTS.md  frontier-after-iter1.json  optimize-real-test-output.txt  pygoat-llm.json
src/s0_cli/: __init__.py  __main__.py  cli.py  config.py  init_cmd.py  mcp_server.py
tests/: test_harness_interface.py  test_init_cmd.py  test_mcp_server.py  test_optimizer_context.py  test_optimizer_strategies.py  test_optimizer_tools.py  test_progress_sink.py  test_provider_config.py  test_reasoning_progress.py  test_report_formats.py  test_scanner_parsers.py  test_scanner_selection.py  test_scorer.py  test_semgrep_parser.py  test_smoke_eval.py  test_supply_chain_scanner.py  test_vibe_scanners.py  test_vulnhunter_harness.py
tests/fixtures/: semgrep_output.json
(+64 files in other folders)
