[project]
name = "s0-cli"
version = "0.3.3"
description = "Security-Zero CLI: a Meta-Harness-shaped agent for scanning code for security and vibe-code issues."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "s0-cli contributors" }]
keywords = ["security", "sast", "llm", "agent", "meta-harness", "vibe-code"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "litellm>=1.50",
    "tenacity>=8.3",
    "unidiff>=0.7.5",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
mcp = [
    "mcp>=1.2",
]
build = [
    "pyinstaller>=6.10",
]

[project.scripts]
s0 = "s0_cli.cli:app"
s0-mcp = "s0_cli.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s0_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/s0_cli/prompts" = "s0_cli/prompts"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
ignore = [
    "S101",
    "S603",
    "S607",
    "UP042",
    "B008",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "E501"]
"bench/**" = ["S", "B", "F", "E"]
"src/s0_cli/harness/tools.py" = ["E501"]
"src/s0_cli/scanners/base.py" = ["E501"]
"src/s0_cli/report/sarif.py" = ["E501"]
"src/s0_cli/optimizer/tools.py" = ["E501"]
"src/s0_cli/optimizer/context.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
